# chess

./: .gitignore  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
android/app/: build.gradle.kts
assets/puzzles/: puzzles.json
aur/: .SRCINFO  PKGBUILD  README.md  publish-aur.fish
aur/chess/: .SRCINFO  PKGBUILD
aur/chess-bin/: .SRCINFO  PKGBUILD
aur/chess-git/: .SRCINFO  PKGBUILD
installers/linux/: build_appimage.sh  build_deb.sh  chess.desktop
installers/windows/: chess.iss
lib/: main.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_ru.dart  app_localizations_tr.dart  app_localizations_zh.dart  app_ru.arb  app_tr.arb  app_zh.arb
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/chess4/: Cargo.toml
rust/chess4/src/: board.rs  bot.rs  game.rs  lib.rs  movegen.rs  serial.rs  types.rs
rust/chess4/tests/: engine.rs
rust/chess_ai/: Cargo.toml
rust/chess_ai/src/: eval.rs  lib.rs  search.rs
rust/chess_ai/tests/: ai.rs
rust/chess_api/: Cargo.toml
rust/chess_api/src/: frb_generated.rs
rust/chess_api/src/api/: ai.rs  analyze.rs  four.rs  game.rs  mod.rs  net.rs  simple.rs
rust/chess_core/: Cargo.toml
rust/chess_core/src/: attacks.rs  bitboard.rs  clock.rs  error.rs  fen.rs  game.rs  lib.rs  movegen.rs  perft.rs  position.rs  san.rs  types.rs  zobrist.rs
rust/chess_core/tests/: perft.rs  rules.rs  variants.rs
rust/chess_net/: Cargo.toml
rust/chess_net/src/: discovery.rs  lib.rs  protocol.rs
rust/puzzle_prep/: Cargo.toml
rust/puzzle_prep/src/: main.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: chess_api.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: chess_api.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/flutter/: generated_plugins.cmake
(+71 files in other folders)
