[workspace]
resolver = "2"
members = ["chess_core", "chess_ai", "chess_net", "chess_api", "chess4", "puzzle_prep"]

[workspace.package]
edition = "2021"
version = "0.1.0"

# Shared dependency versions (verified current June 2026).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
