[package]
name = "chess_api"
version = "0.1.0"
edition = "2021"

# The ONLY crate that depends on flutter_rust_bridge. Re-exports the public API
# surfaced to Flutter and delegates all chess logic to the pure crates below.
# `lib` is included alongside cdylib/staticlib so the crate is unit-testable and
# usable from other Rust crates; cdylib/staticlib are what cargokit links per platform.
[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
chess_core = { path = "../chess_core" }
chess_ai = { path = "../chess_ai" }
chess_net = { path = "../chess_net" }
chess4 = { path = "../chess4" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
